--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
